assets/style/main.css
html, body, section, div, span, iframe, h1, h2, h3, h4, h5, h6, p, img, ol, ul, li {
  border: 0;
  font-size: 100%;
  margin: 0;
  padding: 0; }

html, body {
  height: 100%;
  padding: 0; }

body {
  background: #1B1725;
  display: flex;
  flex-direction: row;
  font-family: 'Monda', sans-serif; }

.left-side {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 65%; }
  .left-side .story-panel {
    align-items: center;
    background-image: url("../block-elements/main-block.png");
    background-size: 100% 100%;
    display: flex;
    flex-direction: column;
    height: 90%;
    justify-content: center;
    width: 92%; }
    .left-side .story-panel .image-container {
      cursor: pointer;
      height: 60%;
      position: relative;
      width: 90%; }
      .left-side .story-panel .image-container .image-frame {
        background-image: url("../block-elements/image-frame.png");
        background-size: 100% 100%;
        position: absolute;
        top: 0;
        height: 100%;
        width: 100%; }
      .left-side .story-panel .image-container .image {
        background: #000;
        background-position: center;
        background-repeat: no-repeat;
        background-size: 100% auto;
        height: 96.7%;
        left: 3px;
        position: absolute;
        top: 5px;
        width: 98.5%; }
    .left-side .story-panel .text-panels {
      display: flex;
      flex-direction: row;
      height: 30%;
      justify-content: space-around;
      width: 96%; }
      .left-side .story-panel .text-panels .title-panel, .left-side .story-panel .text-panels .description-panel {
        background-size: 100% 100%;
        color: #D0BCD5;
        height: 76%;
        margin-top: 10%;
        padding: 9% 3% 9% 3%; }
        .left-side .story-panel .text-panels .title-panel a, .left-side .story-panel .text-panels .description-panel a {
          color: #226CE0;
          text-decoration: none; }
        .left-side .story-panel .text-panels .title-panel a:hover, .left-side .story-panel .text-panels .description-panel a:hover {
          color: #D24CC0; }
      .left-side .story-panel .text-panels .title-panel {
        background-image: url("../block-elements/text-panel-2.png");
        font-family: 'Amatic SC', sans-serif;
        font-weight: 700;
        line-height: 120%;
        overflow: visible;
        text-align: center;
        font-size: 42px;
        width: 26%; }
        .left-side .story-panel .text-panels .title-panel a {
          color: #1B1725; }
      .left-side .story-panel .text-panels .description-panel {
        background-image: url("../block-elements/text-panel-1.png");
        line-height: 120%;
        overflow: hidden;
        width: 56%; }

.right-side {
  align-items: flex-start;
  display: flex;
  flex-direction: column;
  height: 92%;
  margin-top: 4%;
  justify-content: space-around;
  width: 35%; }
  .right-side .icon {
    background-size: 100% 100%;
    color: #D0BCD5;
    cursor: pointer;
    font-family: 'Amatic SC', sans-serif;
    font-size: 60px;
    font-weight: 700;
    height: 28%;
    letter-spacing: 6px;
    line-height: 140px;
    position: relative;
    text-align: center;
    text-shadow: 0px 0px 3px #1B1725;
    width: 84%; }
    .right-side .icon .icon-title {
      position: absolute;
      top: 0;
      width: 100%;
      z-index: 1; }
    .right-side .icon animatic {
      height: 100%;
      position: absolute;
      top: 0;
      width: 100%; }
    .right-side .icon .trigger {
      height: 100%;
      position: absolute;
      top: 0;
      width: 100%;
      z-index: 2; }
  .right-side .games {
    background-image: url("../block-elements/icon-block-1.png"); }
  .right-side .about {
    background-image: url("../block-elements/icon-block-2.png"); }
  .right-side .updates {
    background-image: url("../block-elements/icon-block-3.png"); }

animatic {
  background-repeat: no-repeat;
  display: block;
  opacity: .8; }

#fox {
  background-image: url("../images/robotopia.png"); }

#games {
  background-image: url("../animatics/games/0.png");
  background-size: 200px 140px;
  background-position: 50px 6px; }

#about {
  background-image: url("../animatics/about/0.png");
  background-size: 300px 100%;
  background-position: 30px -2px; }

#updates {
  background-image: url("../animatics/updates/0.png");
  background-size: 300px 100%;
  background-position: 40px -2px; }

/*# sourceMappingURL=main.css.map */

